hledger/test/errors/failing-balance-assertion.j
# hledger check

1/1
  a  0 = 1
